Mockup for sample generic Protocol using MuSig Hierarcical Fsm
Implemented generic Protocol in BisqMuSigSellerAsMakerProtocol to demonstrate possible solutions for separation of Phases in protocols.

Explores a Transition flattening where Parent Fsm imports transitions from children as well as a separate Fsm instance specifically for conflict branch.

Uses timeout as a specific Event that causes a State change, thus restricting ClaimTx from occurring before t1 expires, without a condition being added as an extra protocol check.

Does not take into account actual SellerMaker role or parallel BuyerTaker protocol.
Using Event in some cases where Message is probably more appropriate
Using DummyEvents as placeholder for many Events
Utilizes TradeProtocol for WarningTxHandler to simulate orchestration of active Fsm, this will need to be handled differently in actual implementation